--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3010 && react-scripts start",
-    "start:server": "json-server --watch db.json",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
